--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:id="@+id/putDataText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/put_data_here"
+        android:hint="@string/put_data_here"
         app:layout_constraintTop_toBottomOf="@id/receiveButton"
         app:layout_constraintStart_toStartOf="@id/receiveButton"
         android:layout_marginTop="50dp"
